<resources>
    <string name="app_name" translatable="false">Snapreeal</string>
    <string name="web_client_id" translatable="false">311931052479-5b08d9b6d6k2c178bmcc1pu6vkohhq9d.apps.googleusercontent.com</string>
    <string name="your_avatar">your avatar</string>
    <string name="create_new_diary">create new diary</string>
    <string name="go_back">go back</string>
    <string name="name_for_the_diary">name for the diary</string>
    <string name="let_s_go">let\'s go!</string>
    <string name="your_diaries">your diaries</string>
    <string name="open">open</string>
    <string name="snaps">snaps</string>
    <string name="diary">diary</string>
    <string name="snaps_in_your_diary">snaps in your diary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capture_video_for_your_snap">capture video for your snap</string>
    <string name="switch_cameras">switch cameras</string>
    <string name="upload_your_snap">upload your snap</string>
    <string name="upload_snap">upload snap</string>
    <string name="save_to_gallery">save to gallery</string>
    <string name="generating_your_video">generating your video…</string>
    <string name="generate_video">generate video</string>
</resources>
