<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".activity.DiaryListActivity">

    <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatarImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:shapeAppearanceOverlay="@style/circular_avatar_image"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            android:padding="2dp"
            android:contentDescription="@string/your_avatar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/appLogoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/dm_serif_display"
            android:textSize="24sp"
            android:textColor="@color/primary_900"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/avatarImage"
            app:layout_constraintBottom_toBottomOf="@+id/avatarImage" />

    <ImageButton
            android:id="@+id/createDiaryButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/rounded_add_24"
            android:contentDescription="@string/create_new_diary"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appLogoText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
                android:id="@+id/diaryList"
                android:layout_width="wrap_content"
                android:layout_height="480dp"
                android:orientation="horizontal" />
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
